# SpiNNMachine

./: .gitignore  .gitlab-ci.yml  .pylint_dict.txt  .pylintrc  .ratexcludes  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE.md  LICENSE_POLICY.md  README  README.md  mypy.bash  mypyd.bash  pylint.bash  pypi_to_import  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: c_actions.yml  python_actions.yml  python_actions_extended.yml  python_actions_main.yml  python_test.yml
doc/: doc_requirements.txt  unfiltered-files.txt
doc/source/: conf.py  index.rst  modules.rst  spinn_machine.chip.rst  spinn_machine.exceptions.rst  spinn_machine.link.rst  spinn_machine.machine.rst  spinn_machine.multicast_routing_entry.rst  spinn_machine.processor.rst  spinn_machine.router.rst  spinn_machine.rst  spinn_machine.sdram.rst
spinn_machine/: __init__.py  _version.py  abstract_virtual_vertex.py  base_multicast_routing_entry.py  chip.py  config_setup.py  constants.py  core_subset.py  core_subsets.py  diagnostic_filter.py  exceptions.py  fixed_route_entry.py  fpga_links.py  frozen_core_subsets.py  full_wrap_machine.py  geometry.py  horizontal_wrap_machine.py  json_machine.py  json_utils.py  link.py  machine.py  machine_factory.py  machine_utils.py  multicast_routing_entry.py  no_wrap_machine.py  processor.py  router.py  routing_entry.py  sdram.py  spinn_machine.cfg  spinnaker_link_data.py  spinnaker_links.py  spinnaker_triad_geometry.py  types.py  vertical_wrap_machine.py  virtual_machine.py  virutal_machine.py
spinn_machine/data/: __init__.py  machine_data_view.py  machine_data_writer.py
spinn_machine/ignores/: __init__.py  ignore_chip.py  ignore_core.py  ignore_link.py
spinn_machine/link_data_objects/: __init__.py  abstract_link_data.py  fpga_link_data.py  sata_link_data.py  spinnaker_link_data.py
unittests/: geometry.py  run_tests.py  temp.json  test_cfg_checker.py  test_chip.py  test_coresubset.py  test_coresubsets.py  test_doc_checker.py  test_fixed_route_entry.py  test_frozencoresubsets.py  test_geometry.py  test_ignore_cores.py  test_import_all_test.py  test_json_machine.py  test_link.py  test_link_data.py  test_machine.py  test_multicast_routing_entry.py  test_processor.py  test_router.py  test_routing_entry.py  test_s2_router.py  test_sdram.py  test_spinnaker_triad_geometry.py  test_using_virtual_machine.py  test_utils.py  test_version.py  test_version_factory.py  test_virtual_machine.py  test_virtual_machine201.py  test_virtual_machine248.py  test_virtual_machine3.py  test_virtual_machine5.py  test_virtual_machine_48chips.py  test_virtual_machine_generator.py
(+48 files in other folders)
